--- a/EA1.ipynb
+++ b/EA1.ipynb
@@ -202,7 +202,11 @@
    "id": "fd9ede3d",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "numpy will use a numerically better approach (partial pairwise summation) leading to improved precision in many use-cases"
+    "\n",
+    "In numerical analysis, pairwise summation, also called cascade summation, is a technique to sum a sequence of finite-precision floating-point numbers that substantially reduces the accumulated round-off error compared to naively accumulating the sum in sequence.",
+    "https://numpy.org/doc/stable/reference/generated/numpy.sum.html",
+    "https://en.wikipedia.org/wiki/Pairwise_summation"
    ]
   },
   {
