Aufgabe_Grenzwerte_von_Funktionen_gelöst

--- a/EA1.ipynb
+++ b/EA1.ipynb
@@ -202,11 +202,11 @@
    "id": "fd9ede3d",
    "metadata": {},
    "source": [
-    "numpy will use a numerically better approach (partial pairwise summation) leading to improved precision in many use-cases",
+    "numpy will use a numerically better approach (partial pairwise summation) leading to improved precision in many use-cases\n",
     "\n",
-    "In numerical analysis, pairwise summation, also called cascade summation, is a technique to sum a sequence of finite-precision floating-point numbers that substantially reduces the accumulated round-off error compared to naively accumulating the sum in sequence.",
-    "\n",   
-    "https://numpy.org/doc/stable/reference/generated/numpy.sum.html",
+    "In numerical analysis, pairwise summation, also called cascade summation, is a technique to sum a sequence of finite-precision floating-point numbers that substantially reduces the accumulated round-off error compared to naively accumulating the sum in sequence.\n",
+    "\n",
+    "https://numpy.org/doc/stable/reference/generated/numpy.sum.html\n",
     "\n",
     "https://en.wikipedia.org/wiki/Pairwise_summation"
    ]
@@ -272,14 +272,19 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "\n",
+    "# Definition der Funktion f(x) = (e^x - 1)/x\n",
     "def f(x):\n",
-    "    ...\n",
+    "        return (np.exp(x) - 1) / x\n",
     "\n",
+    "# Erzeuge die Werte x = 10^(-1), 10^(-2), ..., 10^(-15)\n",
+    "input_numbers = np.array([10**(-i) for i in range(1, 16)])\n",
     "\n",
-    "input_numbers = ...\n",
-    "result_limits = ...\n",
-    "print(f\"{result_limits=}\")"
+    "result_limits = f(input_numbers)\n",
+    "\n",
+    "#Ausgabe\n",
+    "for x_val, fx in zip(input_numbers, result_limits):\n",
+    "# Die Anwendung von zip gibt einen Iterator zurück, der in der Lage ist Tupel zu erzeugen\n",
+    "    print(f\"x = {x_val:.0e}, f(x) = {fx}\")"
    ]
   },
   {
@@ -303,9 +308,13 @@
    },
    "outputs": [],
    "source": [
-    "input_numbers_2 = ...\n",
-    "result_limits_2 = ...\n",
-    "print(f\"{result_limits_2=}\")"
+    "input_numbers_2 = np.array([10**(-i) for i in range(16, 21)])\n",
+    "result_limits_2 = f(input_numbers_2)\n",
+    "\n",
+    "#Ausgabe\n",
+    "for x_val, fx in zip(input_numbers_2, result_limits_2):\n",
+    "# Die Anwendung von zip gibt einen Iterator zurück, der in der Lage ist Tupel zu erzeugen\n",
+    "    print(f\"x = {x_val:.0e}, f(x) = {fx}\")"
    ]
   },
   {
@@ -328,7 +337,37 @@
    "id": "746bd18f",
    "metadata": {},
    "source": [
-    "_Type your answer here, replacing this text._"
+    "von 1e-01 bis 1e-14 ergibt die Funktion erwartungsgemäß Werte, die sehr nahe bei 1 liegen. Doch ab etwas 1e-16 ändert sich das Verhalten drastisch:\n",
+    "\n",
+    "x = 1e-15, f(x) = 1.1102230246251565\n",
+    "x = 1e-16, f(x) = 0.0\n",
+    "x = 1e-17, f(x) = 0.0\n",
+    "x = 1e-18, f(x) = 0.0\n",
+    "x = 1e-19, f(x) = 0.0\n",
+    "x = 1e-20, f(x) = 0.0\n",
+    "\n",
+    "Rundungsfehler: Für sehr kleine x ist exp(x) ungefähr gleich 1 + x. Wenn x so klein wird, dass e^x und 1 auf dem Computer nicht mehr unterscheidbar sind, wird der Ausdruck e^x - 1 numerisch zu null. Zum Beispiel: x = 1e-17, exp(x) = 1,00000000000000001. Die Differenz e^x - 1 ist kleiner als die Maschinengenauigkeit epsilon. Deshalb wird e^x - 1 vom Computer mit 0.0 gerechnet, weil die Genauigkeit (64 Bit Float) nicht ausreicht.\n",
+    "\n",
+    "NumPy bietet eine spezielle Funktion np.expm1(x), die exp(x) - 1 genau und stabiler berechnet, besonderes für kleine x."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d1ee4b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f_stabil(x):\n",
+    "    return np.expm1(x) / x\n",
+    "\n",
+    "input_numbers_3 = np.array([10**(-i) for i in range(10, 20)])\n",
+    "result_limits_3 = f_stabil(input_numbers_3)\n",
+    "\n",
+    "#Ausgabe\n",
+    "for x_val, fx in zip(input_numbers_3, result_limits_3):\n",
+    "# Die Anwendung von zip gibt einen Iterator zurück, der in der Lage ist Tupel zu erzeugen\n",
+    "    print(f\"x = {x_val:.0e}, f(x) = {fx}\")"
    ]
   },
   {
