Markup_Zelle_für_Aufgabe_mit_Funktionsgrenzwert_bearbeitet

--- a/EA1.ipynb
+++ b/EA1.ipynb
@@ -337,18 +337,34 @@
    "id": "746bd18f",
    "metadata": {},
    "source": [
-    "von 1e-01 bis 1e-14 ergibt die Funktion erwartungsgemäß Werte, die sehr nahe bei 1 liegen. Doch ab etwas 1e-16 ändert sich das Verhalten drastisch:\n",
+    "Von `1e-01` bis `1e-14` ergibt die Funktion erwartungsgemäß Werte, die sehr nahe bei **1** liegen.  \n",
+    "Doch ab etwa `1e-15` ändert sich das Verhalten drastisch:\n",
     "\n",
-    "x = 1e-15, f(x) = 1.1102230246251565\n",
-    "x = 1e-16, f(x) = 0.0\n",
-    "x = 1e-17, f(x) = 0.0\n",
-    "x = 1e-18, f(x) = 0.0\n",
-    "x = 1e-19, f(x) = 0.0\n",
-    "x = 1e-20, f(x) = 0.0\n",
+    "x = 1e-15, f(x) = 1.1102230246251565  \n",
+    "x = 1e-16, f(x) = 0.0  \n",
+    "x = 1e-17, f(x) = 0.0  \n",
+    "x = 1e-18, f(x) = 0.0  \n",
+    "x = 1e-19, f(x) = 0.0  \n",
+    "x = 1e-20, f(x) = 0.0  \n",
+    "### Erklärung: Rundungsfehler\n",
     "\n",
-    "Rundungsfehler: Für sehr kleine x ist exp(x) ungefähr gleich 1 + x. Wenn x so klein wird, dass e^x und 1 auf dem Computer nicht mehr unterscheidbar sind, wird der Ausdruck e^x - 1 numerisch zu null. Zum Beispiel: x = 1e-17, exp(x) = 1,00000000000000001. Die Differenz e^x - 1 ist kleiner als die Maschinengenauigkeit epsilon. Deshalb wird e^x - 1 vom Computer mit 0.0 gerechnet, weil die Genauigkeit (64 Bit Float) nicht ausreicht.\n",
+    "Für sehr kleine `x` gilt näherungsweise:  \n",
+    "`exp(x) ≈ 1 + x`\n",
     "\n",
-    "NumPy bietet eine spezielle Funktion np.expm1(x), die exp(x) - 1 genau und stabiler berechnet, besonderes für kleine x."
+    "Wenn `x` so klein wird, dass `e^x` und `1` auf dem Computer **nicht mehr unterscheidbar** sind, wird der Ausdruck `e^x - 1` numerisch zu **null**.\n",
+    "\n",
+    "> Beispiel:  \n",
+    "> `x = 1e-17` → `exp(x) ≈ 1.00000000000000001`  \n",
+    "> Die Differenz `e^x - 1` ist kleiner als die **Maschinengenauigkeit** `ε` (Epsilon).  \n",
+    "> Deshalb wird `e^x - 1` vom Computer als **0.0** berechnet, da ein 64-Bit-Gleitkommawert (float64) **nicht mehr ausreichend genau** ist.\n",
+    "\n",
+    "### Lösung: Stabilere Berechnung mit NumPy\n",
+    "\n",
+    "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`.\n",
+    "\n",
+    "```python\n",
+    "def f_stabil(x):\n",
+    "    return np.expm1(x) / x"
    ]
   },
   {
