Markup_Zelle_Erste_Aufgabe_bearbeitet

--- a/EA1.ipynb
+++ b/EA1.ipynb
@@ -94,90 +94,146 @@
    "source": [
     "Je nach Methode ergibt sich ein anderes Additionsergebnis:\n",
     "\n",
-    "sum_numpy=np.float64(1.0000000000000084)\n",
+    "```\n",
+    "sum_numpy   = np.float64(1.0000000000000084)\n",
+    "sum_forward = np.float64(1.0)\n",
+    "sum_reverse = np.float64(1.00000000000001)\n",
+    "```\n",
     "\n",
-    "sum_forward=np.float64(1.0)\n",
+    "---\n",
     "\n",
-    "sum_reverse=np.float64(1.00000000000001)\n",
+    "Das liegt im Wesentlichen an der begrenzten bzw. endlichen Gleitkomma-Darstellung mithilfe des Computers, die zu diesen numerischen Ungenauigkeiten führt.\n",
     "\n",
-    "Das liegt im wesentlichen an der begrenzten bzw. endlichen Gleitkomma-Darstellung mithilfe des Computers, die zu diesen numerischen Ungenauigkeiten führt. **np.float64** (https://numpy.org/doc/2.1/reference/arrays.scalars.html#numpy.float64) ist eine 64-bit Gleitkommazahl z. Die Zahl z hat gemäß IEEE 754 ein Vorzeichenbit ($0$ = positiv und $1$ = negativ), $11$ Bits für den Exponenten und $52$ Bits für die Mantissa. $1 + 11 + 52 = 64$ Bits werden also im Speicher benötigt, um eine Zahl in diesem Zahlenformat zu speichern. Die kleinste Zahl, die man zu $1.0$ addieren kann, sodass das Ergebnis sich von $1.0$ unterscheidet, nennt man die Maschinengenauigkeit oder machine **epsilon**. Das ist der kleinste Unterschied, den ein **np.float64** von $1.0$ unterscheiden kann.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09110acf-fd0b-4eee-940c-ad8b80383359",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.finfo(float).eps  # np.float64(2.220446049250313e-16)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "377f96fa-152e-4977-b85c-e554a64312f6",
-   "metadata": {},
-   "source": [
-    "Die $100$ gleich großen Werte $(=10^{-16})$ sind all unterhalb von $\\text{eps}$. Zum Beispiel ist $1.0 + 10^{-16} = 1.0$, weil $10^{-16}< \\text{eps}$, also zu klein, um überhaupt eine Änderung in der Darstellung von $1.0$ zu bewirken. Die Summanden \"verpuffen\" numerisch. Das Resultat bleibt exakt $1.0$. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ada81d5d-5969-44bc-8645-5b08cf9b59c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "**[`np.float64`](https://numpy.org/doc/2.1/reference/arrays.scalars.html#numpy.float64)** ist eine 64-bit-Gleitkommazahl. Die Zahl wird intern gemäß dem IEEE-754-Standard wie folgt dargestellt:\n",
+    "\n",
+    "- **1 Bit** für das Vorzeichen ($0$ = positiv, $1$ = negativ)\n",
+    "- **11 Bits** für den Exponenten\n",
+    "- **52 Bits** für die Mantisse\n",
+    "\n",
+    "Das ergibt insgesamt: $1 + 11 + 52 = 64$ Bits.\n",
+    "\n",
+    "Die kleinste Zahl, die man zu `1.0` addieren kann, sodass das Ergebnis sich von `1.0` unterscheidet, nennt man die **Maschinengenauigkeit** oder **machine epsilon**. Das ist der kleinste Unterschied, den ein `np.float64` von `1.0` noch unterscheiden kann – und genau hier zeigen sich die Grenzen der numerischen Genauigkeit bei Gleitkommazahlen.\n",
+    "\n",
+    "```python\n",
+    "np.finfo(float).eps  # np.float64(2.220446049250313e-16)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Die $100$ gleich großen Werte ($=10^{-16}$) liegen alle unterhalb von $\\text{eps}$.  Zum Beispiel gilt: $1.0 + 10^{-16} = 1.0$,  weil $10^{-16} < \\text{eps}$ – also zu klein ist, um überhaupt eine Änderung in der Darstellung von $1.0$ zu bewirken.\n",
+    "\n",
+    "Die Summanden **„verpuffen“** numerisch. Das Resultat bleibt exakt **$1.0$**.\n",
+    "\n",
+    "```python\n",
     "print(1e-16 < np.finfo(float).eps)     # True\n",
-    "print(1.0 + 1e-16 == 1.0)              # True"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9ebca001-ee86-4614-b765-7b9782b5b234",
-   "metadata": {},
-   "source": [
-    "Der Bias ist die Exponentenverschiebung, die verwendet wird, um den Exponenten nicht als vorzeichenbehaftete Zahl zu speichern. Exponenten können als positive Zahlen ohne Vorzeichenbit gespeichert werden. Das macht es für die Hardware einfacher, die Zahlen zu verarbeiten. Anstatt z. B. den echten Exponenten $-5$ zu speichern, speichert man $-5$ + Bias. Mit $11$ Bit für den Exponenten kann man Zahlen von $0$ bis $2^{11} - 1 = 2047$ speichern. Der Bias für **np.float64** ist $2^{11-1}-1 = 1023$. Das entspricht der Mitte des $11$-Bit-Bereichs. Die Werte $0$ und $2047$ sind reserviert für Sonderfälle. Damit ergibt sich eine einheitliche Rechenlogik z. B. auch für die Addition. \n",
+    "print(1.0 + 1e-16 == 1.0)              # True\n",
+    "```\n",
     "\n",
-    "Mathematisch ist $1.0 = 1.0 \\cdot 2^0$. Der echte Exponent ist $0$. In IEEE 754 wird dafür $0$ + Bias = $1023_{10} = 01111111111_{2}$ für den Exponenten gespeichert. Die Mantisse speichert nur die Nachkommastellen, die Vorkommastelle $1$ ist implizit, und ist $52$ Bit lang. Somit sind alle $52$ Bit gleich $0$ in diesem Fall der Zahlendarstellung von $1.0$. Insgesamt ergibt sich $1.0_{10} = 0 01111111111 0...0_{ \\text{ IEE 754}}$ oder $1.0 = (-1)^s \\cdot 1,m \\cdot 2^{e-1023}$ mit $s = 0$, $m = 0...0$ und $e = 1023$.\n",
+    "---\n",
     "\n",
-    "Genauso kann $1e-17$ als $1.0 = (-1)^s \\cdot 1,m \\cdot 2^{e-1023}$ dargestellt werden. Dabei ist das Vorzeichenbit $s = 0$. Für die Berechnung der Mantisse und des Exponenten ist die Binärdarstellung von $1e-17$ notwendig. Diese lässt sich wie folgt berechnen:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "debc7236-31bb-43ef-8617-5c3356ff2575",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Der **Bias** ist die Exponentenverschiebung, die verwendet wird, um den Exponenten nicht als vorzeichenbehaftete Zahl zu speichern.  \n",
+    "Exponenten können so als positive Zahlen **ohne Vorzeichenbit** abgelegt werden – das vereinfacht die Verarbeitung durch die Hardware.  \n",
+    "Anstatt z. B. den echten Exponenten $-5$ zu speichern, speichert man stattdessen $-5 + \\text{Bias}$.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Mit $11$ Bits für den Exponenten können Zahlen von $0$ bis $2^{11} - 1 = 2047$ dargestellt werden.  \n",
+    "Der Bias für **np.float64** beträgt:  \n",
+    "$\\text{Bias} = 2^{11 - 1} - 1 = 1023$  \n",
+    "Das entspricht der Mitte des 11-Bit-Bereichs.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "Die Werte $0$ und $2047$ sind reserviert für Sonderfälle (z. B. Null, Inf, NaN).  \n",
+    "So entsteht eine **einheitliche Rechenlogik**, z. B. auch für die Addition.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Beispiel:**  \n",
+    "Mathematisch gilt: $1.0 = 1.0 \\cdot 2^0$ → echter Exponent $= 0$  \n",
+    "In IEEE 754 wird gespeichert: $e = 0 + \\text{Bias} = 1023_{10} = 01111111111_2$\n",
+    "\n",
+    "Die **Mantisse** speichert nur die **Nachkommastellen**,  \n",
+    "die **Vorkommastelle $1$ ist implizit**.  \n",
+    "Die Mantisse ist 52 Bit lang → im Fall von $1.0$: alle Bits gleich 0.\n",
+    "\n",
+    "**Darstellung in IEEE 754 (64 Bit) für 1.0:**\n",
+    "\n",
+    "```\n",
+    "1.0_{10} = 0 01111111111 000...000\n",
+    "```\n",
+    "\n",
+    "Oder mathematisch:\n",
+    "\n",
+    "```\n",
+    "1.0 = (-1)^s · 1.m · 2^{e - 1023}\n",
+    "```\n",
+    "\n",
+    "mit:  \n",
+    "- $s = 0$ (positiv)  \n",
+    "- $m = 0...0$  \n",
+    "- $e = 1023$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Genauso kann z. B. $1e{-17}$ als  \n",
+    "$$1e{-17} = (-1)^s \\cdot 1.m \\cdot 2^{e - 1023}$$  \n",
+    "dargestellt werden.  \n",
+    "Dabei ist $s = 0$.  \n",
+    "Für die Berechnung von Exponent und Mantisse benötigt man die **Binärdarstellung von $1e{-17}$** – die lässt sich mit Python oder NumPy bestimmen.\n",
+    "\n",
+    "```python\n",
     "np.frexp(1e-17) # (np.float64(0.7205759403792794), np.int32(-56)). Das bedeuetet 1e-17 = 0.7205759403792794 * 2^(-56). \n",
-    "# https://numpy.org/doc/2.2/reference/generated/numpy.frexp.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "84bd6aea-642f-4aa4-b6f9-39049ad937b5",
-   "metadata": {},
-   "source": [
-    "Um die normalisierte Darstellung zu erhalten wird die Mantisse $0,7205759403792794$ mit $2$ multipliziert und die Basis mit dem Exponenten $2^{-56}$ durch $2$ dividiert. Dadurch ändert sich nichts am Zahlenwert. Somit ist $0.7205759403792794 \\cdot 2^{-56}$ = $1,4411518807585588 \\cdot 2^{-57}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c65302d7-f5ad-405b-9738-9f4bdfb9283b",
-   "metadata": {},
-   "source": [
-    "Alternativ zur Benutzung von frexp kann man die Gleichung $1e-17 = x\\cdot 2^n$ mit $1 \\leq x < 2$ wie folgt lösen: $\\log_{2}{(1e-17)} = \\log_{2}{(1e-17)}/\\log_{10}(2) \\approx -56,45$. Es folgt $n = -57$. Danach kann die Gleichung $1e-17 = x\\cdot 2^{-57}$ nach $x$ aufgelöst werden. Daraus folgt $x = 2^{57} \\cdot 1e-17 = 1,44115188075855872$. Also gilt $1e-17 = 1,44115188075855872\\cdot 2^{-57}$. IEEE speichert den Exponenten $-57 + 1023 = 966$, wobei $966_{10} = 01111000110_{2}$. IEEE speichert die Mantisse $0,44115188075855872$ ohne das führende $1,$. Die Zahl wird iterativ mit 2 multipliziert und das Ergebnis der 52 Multiplikation von oben nach unten notiert, um die Mantisse zu berechnen.\n",
+    "# https://numpy.org/doc/2.2/reference/generated/numpy.frexp.html\n",
+    "```\n",
     "\n",
-    "$0,44115188075855872 \\cdot 2 = 0,88230376151711744 \\rightarrow 0$\n",
+    "Um die normalisierte Darstellung zu erhalten wird die Mantisse $0,7205759403792794$ mit $2$ multipliziert und die Basis mit dem Exponenten $2^{-56}$ durch $2$ dividiert. Dadurch ändert sich nichts am Zahlenwert. Somit ist $0.7205759403792794 \\cdot 2^{-56}$ = $1,4411518807585588 \\cdot 2^{-57}$.\n",
     "\n",
-    "$0,88230376151711744 \\cdot 2 = 1,76460752303423488 \\rightarrow 1$\n",
+    "Alternativ zur Benutzung von `frexp` kann man die Gleichung\n",
     "\n",
-    "$0,76460752303423488 \\cdot 2 = 1,52921504606846976 \\rightarrow 1$\n",
+    "$$1e{-17} = x \\cdot 2^n$$\n",
     "\n",
-    "..."
+    "mit $1 \\leq x < 2$ wie folgt lösen:\n",
+    "\n",
+    "$$\\log_2(1e{-17}) = \\frac{\\log_2(1e{-17})}{\\log_{10}(2)} \\approx -56,45$$\n",
+    "\n",
+    "Es folgt:\n",
+    "\n",
+    "$$n = -57$$\n",
+    "\n",
+    "Danach kann die Gleichung\n",
+    "\n",
+    "$$1e{-17} = x \\cdot 2^{-57}$$\n",
+    "\n",
+    "nach $x$ aufgelöst werden. Daraus folgt:\n",
+    "\n",
+    "$$x = 2^{57} \\cdot 1e{-17} = 1,44115188075855872$$\n",
+    "\n",
+    "Also gilt:\n",
+    "\n",
+    "$$1e{-17} = 1,44115188075855872 \\cdot 2^{-57}$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "In IEEE 754 wird der Exponent als $-57 + 1023 = 966$ gespeichert, wobei:\n",
+    "\n",
+    "$$966_{10} = 01111000110_2$$\n",
+    "\n",
+    "Der Exponent wird als 11-Bit-Binärzahl gespeichert.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Nun zur Mantisse:  \n",
+    "IEEE speichert die Mantisse $0,44115188075855872$ ohne das führende $1$.  \n",
+    "Die Zahl wird iterativ mit 2 multipliziert, und das Ergebnis der 52 Multiplikationen wird von oben nach unten notiert, um die Mantisse zu berechnen.\n",
+    "\n",
+    "Die ersten Schritte der Berechnung sind:\n",
+    "\n",
+    "$$0,44115188075855872 \\cdot 2 = 0,88230376151711744 \\quad \\rightarrow \\quad 0$$\n",
+    "\n",
+    "$$0,88230376151711744 \\cdot 2 = 1,76460752303423488 \\quad \\rightarrow \\quad 1$$\n",
+    "\n",
+    "$$0,76460752303423488 \\cdot 2 = 1,52921504606846976 \\quad \\rightarrow \\quad 1$$"
    ]
   },
   {
