Textfarbe der Antworten mit HTML <span> auf blau geändert

--- a/EA1.ipynb
+++ b/EA1.ipynb
@@ -92,6 +92,8 @@
    "id": "d595469a",
    "metadata": {},
    "source": [
+    "<span style=\"color:blue\">\n",
+    "\n",
     "Je nach Methode ergibt sich ein anderes Additionsergebnis:\n",
     "\n",
     "```\n",
@@ -115,7 +117,8 @@
     "Die kleinste Zahl, die man zu `1.0` addieren kann, sodass das Ergebnis sich von `1.0` unterscheidet, nennt man die **Maschinengenauigkeit** oder **machine epsilon**. Das ist der kleinste Unterschied, den ein `np.float64` von `1.0` noch unterscheiden kann – und genau hier zeigen sich die Grenzen der numerischen Genauigkeit bei Gleitkommazahlen.\n",
     "\n",
     "```python\n",
-    "np.finfo(float).eps  # np.float64(2.220446049250313e-16)\n",
+    "np.finfo(float).eps  \n",
+    "# np.float64(2.220446049250313e-16)\n",
     "```\n",
     "\n",
     "---\n",
@@ -183,7 +186,9 @@
     "Für die Berechnung von Exponent und Mantisse benötigt man die **Binärdarstellung von $1e{-17}$** – die lässt sich mit Python oder NumPy bestimmen.\n",
     "\n",
     "```python\n",
-    "np.frexp(1e-17) # (np.float64(0.7205759403792794), np.int32(-56)). Das bedeuetet 1e-17 = 0.7205759403792794 * 2^(-56). \n",
+    "np.frexp(1e-17) \n",
+    "# (np.float64(0.7205759403792794), np.int32(-56)). \n",
+    "# Das bedeuetet 1e-17 = 0.7205759403792794 * 2^(-56). \n",
     "# https://numpy.org/doc/2.2/reference/generated/numpy.frexp.html\n",
     "```\n",
     "\n",
@@ -233,7 +238,9 @@
     "\n",
     "$$0,88230376151711744 \\cdot 2 = 1,76460752303423488 \\quad \\rightarrow \\quad 1$$\n",
     "\n",
-    "$$0,76460752303423488 \\cdot 2 = 1,52921504606846976 \\quad \\rightarrow \\quad 1$$"
+    "$$0,76460752303423488 \\cdot 2 = 1,52921504606846976 \\quad \\rightarrow \\quad 1$$\n",
+    "\n",
+    "</span> "
    ]
   },
   {
@@ -258,13 +265,17 @@
    "id": "fd9ede3d",
    "metadata": {},
    "source": [
-    "numpy will use a numerically better approach (partial pairwise summation) leading to improved precision in many use-cases\n",
+    "<span style=\"color:blue\">\n",
     "\n",
-    "In numerical analysis, pairwise summation, also called cascade summation, is a technique to sum a sequence of finite-precision floating-point numbers that substantially reduces the accumulated round-off error compared to naively accumulating the sum in sequence.\n",
+    "NumPy verwendet ein numerisch besseres Verfahren (partielle paarweise Summation), das in vielen Anwendungsfällen zu einer höheren Genauigkeit führt.\n",
+    "\n",
+    "In der numerischen Mathematik bezeichnet paarweise Summation – auch Kaskadensummation genannt – ein Verfahren zum Addieren von Gleitkommazahlen, das Rundungsfehler im Vergleich zur sequentiellen Summation deutlich reduziert.\n",
     "\n",
     "https://numpy.org/doc/stable/reference/generated/numpy.sum.html\n",
     "\n",
-    "https://en.wikipedia.org/wiki/Pairwise_summation"
+    "https://en.wikipedia.org/wiki/Pairwise_summation\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -393,6 +404,8 @@
    "id": "746bd18f",
    "metadata": {},
    "source": [
+    "<span style=\"color:blue\">\n",
+    "\n",
     "Von `1e-01` bis `1e-14` ergibt die Funktion erwartungsgemäß Werte, die sehr nahe bei **1** liegen.  \n",
     "Doch ab etwa `1e-15` ändert sich das Verhalten drastisch:\n",
     "\n",
@@ -418,9 +431,12 @@
     "\n",
     "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`.\n",
     "\n",
+    "</span>\n",
+    "\n",
     "```python\n",
     "def f_stabil(x):\n",
-    "    return np.expm1(x) / x"
+    "    return np.expm1(x) / x\n",
+    "\n"
    ]
   },
   {
@@ -502,6 +518,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aabbf72e",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:blue\">\n",
+    "Im Folgenden wird eine Funktion zur Lösung eines linearen Gleichungssystems mit einer oberen Dreiecksmatrix implementiert. Dieses sogenannte Backsubstitution-Verfahren stellt einen zentralen Schritt im Rahmen des Gauß-Verfahrens bzw. der LU-Zerlegung dar. Dabei wird die Lösung des Systems zeilenweise von unten nach oben bestimmt. Die Implementierung legt besonderen Wert auf numerische Stabilität und Effizienz.\n",
+    "</span>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "95406ab9-708c-4710-a0e4-c32a1bebd8c4",
@@ -541,7 +567,7 @@
     "A = np.array([[2,3,5,1],[0,4,6,2],[0,0,7,3],[0,0,0,8]])\n",
     "b = np.array([9,8,7,8])\n",
     "x = b_solve(A,b)\n",
-    "#print(f\"{np.dot(A,x)} == {b}\") #[9. 8. 7. 8.] == [9 8 7 8]"
+    "#print(f\"{np.dot(A,x)} == {b}\") #\"[9. 8. 7. 8.] == [9 8 7 8]\""
    ]
   },
   {
