--- a/EA1.ipynb
+++ b/EA1.ipynb
@@ -267,9 +267,7 @@
    "source": [
     "<span style=\"color:blue\">\n",
     "\n",
-    "NumPy verwendet ein numerisch besseres Verfahren (partielle paarweise Summation), das in vielen Anwendungsfällen zu einer höheren Genauigkeit führt.\n",
-    "\n",
-    "In der numerischen Mathematik bezeichnet paarweise Summation – auch Kaskadensummation genannt – ein Verfahren zum Addieren von Gleitkommazahlen, das Rundungsfehler im Vergleich zur sequentiellen Summation deutlich reduziert.\n",
+    "NumPy verwendet ein numerisch besseres Verfahren (partielle paarweise Summation), das in vielen Anwendungsfällen zu einer höheren Genauigkeit führt. In der numerischen Mathematik bezeichnet paarweise Summation – auch Kaskadensummation genannt – ein Verfahren zum Addieren von Gleitkommazahlen, das Rundungsfehler im Vergleich zur sequentiellen Summation deutlich reduziert.\n",
     "\n",
     "https://numpy.org/doc/stable/reference/generated/numpy.sum.html\n",
     "\n",
