Kleine Textänderungen und Verbesserungen in den Lösungen

--- a/EA1.ipynb
+++ b/EA1.ipynb
@@ -162,15 +162,12 @@
     "\n",
     "**Darstellung in IEEE 754 (64 Bit) für 1.0:**\n",
     "\n",
-    "```\n",
-    "1.0_{10} = 0 01111111111 000...000\n",
-    "```\n",
+    "\n",
+    "$1.0_{10} = 0 01111111111 000...000$\n",
     "\n",
     "Oder mathematisch:\n",
     "\n",
-    "```\n",
-    "1.0 = (-1)^s · 1.m · 2^{e - 1023}\n",
-    "```\n",
+    "$1.0 = (-1)^s · 1.m · 2^{e - 1023}$\n",
     "\n",
     "mit:  \n",
     "- $s = 0$ (positiv)  \n",
@@ -429,12 +426,7 @@
     "\n",
     "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`.\n",
     "\n",
-    "</span>\n",
-    "\n",
-    "```python\n",
-    "def f_stabil(x):\n",
-    "    return np.expm1(x) / x\n",
-    "\n"
+    "</span>"
    ]
   },
   {
