--- a/EA1.ipynb
+++ b/EA1.ipynb
@@ -94,6 +94,8 @@
    "source": [
     "<span style=\"color:blue\">\n",
     "\n",
+    "<h2>Numerische Genauigkeit</h2>\n",
+    "\n",
     "Je nach Methode ergibt sich ein anderes Additionsergebnis:\n",
     "\n",
     "```\n",
@@ -264,6 +266,8 @@
    "source": [
     "<span style=\"color:blue\">\n",
     "\n",
+    "<h2>Kaskadensummation</h2>\n",
+    "\n",
     "NumPy verwendet ein numerisch besseres Verfahren (partielle paarweise Summation), das in vielen Anwendungsfällen zu einer höheren Genauigkeit führt. In der numerischen Mathematik bezeichnet paarweise Summation – auch Kaskadensummation genannt – ein Verfahren zum Addieren von Gleitkommazahlen, das Rundungsfehler im Vergleich zur sequentiellen Summation deutlich reduziert.\n",
     "\n",
     "https://numpy.org/doc/stable/reference/generated/numpy.sum.html\n",
@@ -312,6 +316,25 @@
     "**Aufgabe:** Berechnen Sie nun die Funktion für  $x= 10^{-16}, 10^{-17}, \\cdots , 10^{-20}$\n",
     "\n",
     "_Points:_ 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b97ff09",
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "source": [
+    "<span style=\"color:blue\">\n",
+    "<h2>Berechnung der Funktion f(x) = (exp(x) - 1) / x </h2>\n",
+    "</span>\n",
+    "\n",
+    "\n",
+    "<span style=\"color:blue\">\n",
+    "In dieser Aufgabe soll die Funktion f(x) für x = 10<sup>-1</sup>, 10<sup>-2</sup>, ..., 10<sup>-15</sup> berechnet werden. Danach soll die Funktion für noch kleinere Werte von x, nämlich x = 10<sup>-16</sup>, 10<sup>-17</sup>, ..., 10<sup>-20</sup>, berechnet werden. Der Grenzwert der Funktion für x → 0 ist 1.\n",
+    "</span>\n"
    ]
   },
   {
@@ -400,6 +423,10 @@
    "metadata": {},
    "source": [
     "<span style=\"color:blue\">\n",
+    "<h2> Erklärung des Verhaltens der Funktion bei kleinen x-Werten </h2>\n",
+    "\n",
+    "Für Werte von x zwischen `1e-01` bis `1e-14` liefert die Funktion erwartungsgemäß Ergebnisse nahe bei **1**. Ab etwa 1e-15 treten jedoch drastische Änderungen auf, die durch Rundungsfehler bei der Berechnung von `e^x - 1` bedingt sind. Besonders bei sehr kleinen x-Werten wird der Unterschied zwischen `e^x` und `1` auf dem Computer nicht mehr erkennbar, was zu fehlerhaften Ergebnissen führt. Eine stabilere Berechnung kann durch die Verwendung der Funktion `np.expm1(x)` von NumPy erreicht werden.\n",
+    "\n",
     "\n",
     "Von `1e-01` bis `1e-14` ergibt die Funktion erwartungsgemäß Werte, die sehr nahe bei **1** liegen.  \n",
     "Doch ab etwa `1e-15` ändert sich das Verhalten drastisch:\n",
@@ -410,7 +437,8 @@
     "x = 1e-18, f(x) = 0.0  \n",
     "x = 1e-19, f(x) = 0.0  \n",
     "x = 1e-20, f(x) = 0.0  \n",
-    "### Erklärung: Rundungsfehler\n",
+    "\n",
+    "<h3> Erklärung: Rundungsfehler </h3>\n",
     "\n",
     "Für sehr kleine `x` gilt näherungsweise:  \n",
     "`exp(x) ≈ 1 + x`\n",
@@ -422,7 +450,7 @@
     "> Die Differenz `e^x - 1` ist kleiner als die **Maschinengenauigkeit** `ε` (Epsilon).  \n",
     "> Deshalb wird `e^x - 1` vom Computer als **0.0** berechnet, da ein 64-Bit-Gleitkommawert (float64) **nicht mehr ausreichend genau** ist.\n",
     "\n",
-    "### Lösung: Stabilere Berechnung mit NumPy\n",
+    "<h3> Lösung: Stabilere Berechnung mit NumPy </h3>\n",
     "\n",
     "NumPy bietet mit `np.expm1(x)` eine spezielle Funktion an, die den Ausdruck `exp(x) - 1` **numerisch stabiler** berechnet – insbesondere für sehr kleine `x`.\n",
     "\n",
@@ -513,6 +541,9 @@
    "metadata": {},
    "source": [
     "<span style=\"color:blue\">\n",
+    "\n",
+    "  <h2>Backsubstitution-Verfahren</h2>\n",
+    "\n",
     "Im Folgenden wird eine Funktion zur Lösung eines linearen Gleichungssystems mit einer oberen Dreiecksmatrix implementiert. Dieses sogenannte Backsubstitution-Verfahren stellt einen zentralen Schritt im Rahmen des Gauß-Verfahrens bzw. der LU-Zerlegung dar. Dabei wird die Lösung des Systems zeilenweise von unten nach oben bestimmt. Die Implementierung legt besonderen Wert auf numerische Stabilität und Effizienz.\n",
     "</span>"
    ]
@@ -601,6 +632,20 @@
     "- Versuchen Sie, die interne Vektorisierung von NumPy im Eliminationsschritt zu nutzen. Verwenden Sie dazu die Slicing-Syntax, um die innerste Schleife zu ersetzen.\n",
     "\n",
     "_Points:_ 15"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af1572ca",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: blue;\">\n",
+    "  <h2>LU-Zerlegung mit Pivotisierung</h2>\n",
+    "</span>\n",
+    "\n",
+    "<span style=\"color: blue;\">\n",
+    "Im folgenden Code wird die LU-Zerlegung einer Matrix A mit Pivotisierung implementiert. Die Matrix A wird in die Form A = LU zerlegt, wobei L und U die untere und obere Dreiecksmatrix sind. Zusätzlich wird ein Pivot-Vektor zurückgegeben, der die Zeilenvertauschung anzeigt. Die Berechnung erfolgt in-place und nutzt NumPy für effiziente Vektorisierung.\n",
+    "</span>"
    ]
   },
   {
