Kleine Textänderung in der ersten Überschrift

--- a/EA1.ipynb
+++ b/EA1.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "<span style=\"color:blue\">\n",
     "\n",
-    "<h2>Numerische Genauigkeit</h2>\n",
+    "<h2>Numerische Genauigkeit von verschiedenen Additionsverfahren</h2>\n",
     "\n",
     "Je nach Methode ergibt sich ein anderes Additionsergebnis:\n",
     "\n",
