Kommentar im Code für das Backsubstitution-Verfahren ergänzt

--- a/EA1.ipynb
+++ b/EA1.ipynb
@@ -579,7 +579,7 @@
     "    # range(start, \"bis zu aber nicht einschließlich\" stop, step)\n",
     "    for i in range(n - 1, -1, -1):  \n",
     "        # Berechnung der Summe der Produkte der bekannten x-Werte\n",
-    "        summation = np.dot(A[i, i + 1:], x[i + 1:])\n",
+    "        summation = np.dot(A[i, i + 1:], x[i + 1:]) # hier wird die Vektorisierung, die numpy zur Verfügung stellt, benutzt, um die Effizienz zu erhöhen\n",
     "        x[i] = (b[i] - summation) / A[i, i]  # Berechnung des aktuellen x_i\n",
     "        #print(f\"x[{i}] = (b[{i}] - summation) / A[i, i] = ({b[i]} - {np.dot(A[i, i + 1:], x[i + 1:])}) / {A[i,i]} = {x[i]}\")\n",
     "    return x\n",
